--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -26,10 +26,10 @@ a.button {
 }
 
 .button--blue.button--blue {
-    background-color: @blue;
+    background-color: @heritage-blue;
 
     &:hover, &:focus, &:active {
-        background: darken(@blue,5%);
+        background: darken(@heritage-blue,5%);
     }
 }
 .button--green.button--green {
@@ -40,10 +40,10 @@ a.button {
     }
 }
 .button--orange.button--orange {
-    background-color: @orange;
+    background-color: @beta-orange;
 
     &:hover, &:focus, &:active {
-        background: darken(@orange,10%);
+        background: darken(@beta-orange,10%);
     }
 }
 .button--pink.button--pink {
@@ -56,10 +56,10 @@ a.button {
     }
 }
 .button--purple.button--purple {
-    background-color: @purple;
+    background-color: @beta-purple-dark;
 
     &:hover, &:focus, &:active {
-        background: darken(@purple,10%);
+        background: darken(@beta-purple-dark,10%);
     }
 }
 .button--grey.button--grey {
