--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -724,13 +724,13 @@ input[type="file"]::before {
     position: relative;
     width: 85%;
     float: left;
-    background: @grey;
+    background: @gray-6;
 
     & > i {
         position: absolute;
         right: 0;
         top: 0;
-        background: @blue;
+        background: @heritage-blue;
         color: white;
         padding: 0 .2em;
         font-size: 1.3em;
