--- a/libs/base/global.less
+++ b/libs/base/global.less
@@ -16,7 +16,7 @@ button, input, optgroup, select, textarea {
 }
 
 a {
-    color: @blue;
+    color: @heritage-blue;
     text-decoration: none;
     // Stop very long links breaking small mobile viewports
     word-wrap: break-word;
