--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -7,7 +7,7 @@
     // Stops the whole page getting really weird
     min-width: 800px;
 	.mega-menu {
-	    border: 1px solid  @blue-40;
-	    border-top: 6px solid @blue-40;
+	    border: 1px solid  @blue-navigation;
+	    border-top: 6px solid @blue-navigation;
 	}
 }
