--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -142,7 +142,7 @@
 @legend-color:          			@gray-1;
 
 @field-boxed-bg:            		@white;
-@field-boxed-hover-bg:      		@cloud;
+@field-boxed-hover-bg:      		@gray-6;
 @field-boxed-active-bg:     		@beta-aqua-light;
 
 @field-boxed-border:        		transparent;
