--- a/libs/existing/inc/atoz.less
+++ b/libs/existing/inc/atoz.less
@@ -22,12 +22,12 @@
             width: 2.4em;
             padding: .5em;
             &:hover, &:focus {
-                background-color:@blue;
+                background-color:@heritage-blue;
             }
         }
 
         &.atoz-letters__current > a {
-            background-color:@blue;
+            background-color:@heritage-blue;
         }
     }
 }
