--- a/libs/existing/inc/buttons.less
+++ b/libs/existing/inc/buttons.less
@@ -7,7 +7,7 @@ button, input[type=submit], input[type=reset], input[type=button], .button {
     padding: 0;
     padding: .1em .4em;
     border-radius: .2em;
-    background-color: @blue;
+    background-color: @heritage-blue;
     color: white;
     font-weight: 600;
 
@@ -25,7 +25,7 @@ a.button {
 }
 
 .button--blue.button--blue {
-    background-color: @blue;
+    background-color: @heritage-blue;
 
     &:hover, &:focus, &:active {
         background: darken(@blue,5%);
