--- a/libs/existing/inc/calls-for-evidence.less
+++ b/libs/existing/inc/calls-for-evidence.less
@@ -1,6 +1,6 @@
 ﻿.calls-for-evidence:extend( .box--outline all ) {
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
 
         & > i {
             // Add a bit more spacing onthe icon
