--- a/libs/existing/inc/footer.less
+++ b/libs/existing/inc/footer.less
@@ -18,7 +18,7 @@
     padding: 1em;
 
     & > h2 {
-        color:@blue;
+        color:@heritage-blue;
         font-size: 1.6em;
         margin: 0;
     }
