--- a/libs/existing/inc/forms-old.less
+++ b/libs/existing/inc/forms-old.less
@@ -103,13 +103,13 @@
 
 /*Button variants*/
 input[type="submit"].secondary-button {
-    background: @blue;
+    background: @heritage-blue;
 }
 input[type="submit"].secondary-button:hover {
     background: #004d9b;
 }
 input[type="submit"].secondary-button-small {
-    background: @blue;
+    background: @heritage-blue;
     height: 25px;
 }
 input[type="submit"].secondary-button-small:hover {
