--- a/libs/existing/inc/header.less
+++ b/libs/existing/inc/header.less
@@ -110,7 +110,7 @@ input.main-header__search__input {
      .main-header__links {
         display: table;
         width: 100%;
-        background: @blue;
+        background: @heritage-blue;
      }
      
      html[lang="en-SCT"] .main-header__links {
