--- a/libs/existing/inc/highlight.less
+++ b/libs/existing/inc/highlight.less
@@ -3,7 +3,7 @@
 .highlight {
   background: lighten( @blue, 58% );
   padding: .5em 1em;
-  border-left: 3px solid @blue;
+  border-left: 3px solid @heritage-blue;
 }
 
 .highlight--warning {
