--- a/libs/existing/inc/home-page.less
+++ b/libs/existing/inc/home-page.less
@@ -1,6 +1,6 @@
 ﻿.home-page__box:extend(.box all ) {
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
     }
 }
 
@@ -28,7 +28,7 @@
     padding-bottom: 100px;
 
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
         font-size: 3em;
         font-weight: 800;
         margin-bottom: 0;
@@ -48,12 +48,12 @@
     }
 
     & .search-inline__button {
-        background: @blue;
+        background: @heritage-blue;
 
         & > input,
         & > input:hover, 
         & > input:focus {
-            background: url("/static/images/search-icon.png") no-repeat scroll center @blue;
+            background: url("/static/images/search-icon.png") no-repeat scroll center @heritage-blue;
             background-size: 30%;
             border-radius: 0;
             box-shadow: none;
@@ -68,7 +68,7 @@
 
 .home-page__box--trending-advice {
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
         font-size: 2.6em;
         font-weight: 800;
     }
@@ -110,7 +110,7 @@
     padding-bottom: 180px;
 
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
         font-size: 3em;
         font-weight: 800;
     }
@@ -120,7 +120,7 @@
 
         & > input {
             color: @white;
-            background: @blue;
+            background: @heritage-blue;
             border: none;
             -webkit-border-radius: 5px;
             -moz-border-radius: 5px;
