--- a/libs/existing/inc/main-nav.less
+++ b/libs/existing/inc/main-nav.less
@@ -10,7 +10,7 @@
 
 .main-nav {
     .clearfix;
-    background-color:@blue;
+    background-color:@heritage-blue;
     // Chrome messes up the spacing without this
     //margin-bottom: 1em;
 }
@@ -200,7 +200,7 @@ html[lang="en-SCT"] .main-nav {
 
 .mega-menu__promo {
     background: @blue-5;
-    color: @blue;
+    color: @heritage-blue;
     padding: .5em;
     overflow: hidden; /* Clearfix */
 
@@ -211,7 +211,7 @@ html[lang="en-SCT"] .main-nav {
     }
 
     a, a:hover {
-        color: @blue;
+        color: @heritage-blue;
         font-weight: bold;
     }
 }
