--- a/libs/existing/inc/members.less
+++ b/libs/existing/inc/members.less
@@ -7,10 +7,10 @@
 }
 
 .home-page__box--member-welcome:extend(.box all ) {
-    border-top: 8px solid @blue;
+    border-top: 8px solid @heritage-blue;
 
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
         width: 49%;
     }
 
@@ -40,17 +40,17 @@
     border-top: none;
 
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
     }
 
     .button--green {
-        background-color: @blue;
+        background-color: @heritage-blue;
         color: @white;
     }
 }
 
 .home-page__box--member-contact:extend(.box all ) {
-    background-color: @blue;
+    background-color: @heritage-blue;
     border-top: none;
     color: @white;
 
@@ -63,7 +63,7 @@
 .home-page__box--member-more:extend(.box all ) {
 
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
     }
 
     & img:first-child {
@@ -100,7 +100,7 @@
 .home-page__box--member-supporters:extend(.box all ) {
     
     & > h2 {
-        color: @blue;
+        color: @heritage-blue;
     }
 
     & table {
@@ -166,7 +166,7 @@
 
 .side-nav--member {
     & > h2 {
-        background: @blue;
+        background: @heritage-blue;
         color: white;
         margin: 0;
         font-size: 1.2em;
