--- a/libs/existing/inc/share-bar.less
+++ b/libs/existing/inc/share-bar.less
@@ -172,11 +172,11 @@
 
     .share-bar__link--email {
         &:hover, &:focus {
-            background: @blue;
+            background: @heritage-blue;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @blue;
+            background: @heritage-blue;
 
             &:hover {
                 background: darken(@blue,10%);
@@ -229,11 +229,11 @@
 
     .share-bar__link--references {
         &:hover, &:focus {
-            background: @blue;
+            background: @heritage-blue;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @blue;
+            background: @heritage-blue;
 
             &:hover {
                 background: darken(@blue,10%);
