--- a/libs/existing/inc/side-nav.less
+++ b/libs/existing/inc/side-nav.less
@@ -1,5 +1,5 @@
 ﻿.side-nav > h2 {
-    background: @blue;
+    background: @heritage-blue;
     margin: 0;
     font-size: 1.2em;
     padding: .7em .5em; // This is supposed to be the same height as the main title
