--- a/libs/existing/inc/tables.less
+++ b/libs/existing/inc/tables.less
@@ -18,7 +18,7 @@ td, th {
 td {background: #fff;}
 
 th {
-  background: @blue;
+  background: @heritage-blue;
   color: #fff;
   font-weight: normal;
 
@@ -68,7 +68,7 @@ td > *:first-child {padding-top:0;}
         // Reset the colours changed for the standard tables
         // Pity we can't use :not for the selector above
         a {
-             color: @blue;
+             color: @heritage-blue;
              text-decoration: none;
 
              &:hover, &:focus {
