--- a/libs/existing/tinymce-main.less
+++ b/libs/existing/tinymce-main.less
@@ -81,7 +81,7 @@ a[href^="http://bmis.org.uk"]:before {
 }
 
 .mceItemTable th {
-  background: @blue;
+  background: @heritage-blue;
   color: #fff;
   font-weight: normal;
 
