--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -91,7 +91,7 @@
     }
 
     i {
-        background: @blue;
+        background: @heritage-blue;
         color: @white;
         margin: -.1em -.5em -.1em 1em;
         padding: .2em .3em;
