--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -96,16 +96,16 @@
 
 .highlight {
   .callout(
-    @callout-background: lighten( @blue, 58% ),
-    @callout-border: @blue
+    @callout-background: lighten( @heritage-blue, 58% ),
+    @callout-border: @heritage-blue
   );
   .callout--border--left;
 }
 
 .highlight--warning {
   .callout(
-    @callout-background: lighten( @orange, 40% ),
-    @callout-border: @orange
+    @callout-background: lighten( @beta-orange, 40% ),
+    @callout-border: @beta-orange
   );
   .callout--border--left;
 }
