--- a/libs/modules/footer.less
+++ b/libs/modules/footer.less
@@ -5,7 +5,7 @@
  */
 
 .main-footer {
-    background-color: @blue-30;
+    background-color: @blue-footer;
     .black-text;
     overflow: hidden; // Prevent collapsing margins
 
@@ -27,7 +27,7 @@
     padding: @box-spacing-horizontal;
 
     & > h2 {
-        color:@blue;
+        color:@heritage-blue;
         font-size: @font-size-large;
         margin: 0;
     }
