--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -136,7 +136,7 @@ html[lang="en-SCT"] .main-nav {
     position: absolute;
     background: @white;
     top: 100%;
-    border-top: 6px solid @heritage-blue-lighter;
+    border-top: 6px solid @blue-navigation;
     -moz-box-shadow: 0 0 10px @gray-2;
     -webkit-box-shadow: 0 0 10px @gray-2;
     box-shadow: 0 0 10px @gray-2;
@@ -202,7 +202,7 @@ html[lang="en-SCT"] .main-nav {
     &__arrow {
         border-left: 10px solid transparent; 
         border-right: 10px solid transparent; 
-        border-bottom: 10px solid @heritage-blue-lighter;
+        border-bottom: 10px solid @blue-navigation;
         position: absolute;
         /* We actually position this in JS as Chrome and Firefox cannot agree how position
          inside a display: table element with borders
