--- a/libs/modules/toc.less
+++ b/libs/modules/toc.less
@@ -44,7 +44,7 @@
 .toc-legacy__num {
     position: absolute; /* Move to the right */
     right: 0; 
-    background: @blue-5; /* Hides the dots */
+    background: @heritage-blue-lightest; /* Hides the dots */
     padding-left: @box-spacing-horizontal*.5; 
     width: 7em; /* Make sure they are left aligned */
 }
