--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -12,11 +12,8 @@
  */
 
 @text-color:            	#191926;
-@brand-primary:         	#253460;    // Blue
+@brand-primary:         	#253460; // Blue
 @brand-secondary:       	@beta-aqua;
-@cloud:                 	#EFF3F3;    // Off white
-@silver:                	#BDC3C7;
-
 
 /***************************************************************************
  * BETA COLORS
@@ -41,9 +38,9 @@
 @heritage-blue-lighter:     lighten(@heritage-blue, 55%);
 @heritage-blue-lightest:	#f2f8ff;
 @heritage-blue-nav:			#dce5f1;
-@heritage-yellow-darker:    darken(@heritage-yellow, 10%);
 @heritage-yellow:       	#FCBB69;
 @heritage-yellow-lighter:   lighten(@heritage-yellow, 20%);
+@heritage-yellow-darker:    darken(@heritage-yellow, 10%);
 @responsible-purple:    	#57486B;
 @responsible-aqua:      	#90CE9C;
 @inventive-teal:        	#006278;
@@ -54,24 +51,38 @@
 // Beta colours
 @beta-red:              	#DF3034;
 @beta-red-light:            lighten(@beta-red, 20%);
-@beta-red-lighter:          lighten(@beta-red, 40%); 	// #fae1e1
+@beta-red-lighter:          lighten(@beta-red, 40%); 	// #FAE1E1
 @beta-orange:           	#F47738;
-@beta-orange-light:         lighten(@beta-orange, 20%); // NEEDS TO BE CHECKED
-@beta-orange-lighter:       lighten(@beta-orange, 40%); // NEEDS TO BE CHECKED
+@beta-orange-light:         lighten(@beta-orange, 20%);
+@beta-orange-lighter:       lighten(@beta-orange, 40%);
 @beta-green:            	#537D2D;
-@beta-green-light:          lighten(@beta-green, 45%); 	// NEEDS TO BE CHECKED
-@beta-green-lighter:        lighten(@beta-green, 50%); 	// #d3e8c1
-@beta-blue-darker:          #32457E;
+@beta-green-light:          lighten(@beta-green, 45%);
+@beta-green-lighter:        lighten(@beta-green, 50%); 	// #D3E8C1
+@beta-green-dark:			darken(@beta-green, 10%);
 @beta-blue:      			#003C64;
 @beta-blue-light:       	#A5BDDC;
 //@beta-blue-lighter:  		lighten(@beta-blue-light, 15%);
 //@beta-blue-light:       	#dce5f1;
 @beta-blue-lighter:  		lighten(@beta-blue, 70%);
+@beta-blue-darker:          #32457E;
+@blue-navigation: 					#99B7C4;
+@blue-footer: 				#B2C9DB;
 @beta-aqua:             	#81CEC6;
 @beta-aqua-light:          	lighten(@beta-aqua, 15%);
 @beta-yellow:           	#FFBF47;
-@beta-yellow-light:     	lighten(@beta-yellow, 25%); //#ffebc6
+@beta-yellow-light:     	lighten(@beta-yellow, 25%); // #FFEBC6
 @beta-purple:				#947ACA;
+@beta-purple-dark:			darken(@beta-purple, 25%);
+@gray-background: 			#47565b; // Blue-gray colour
+
+/***************************************************************************
+ * COLORS
+*/
+
+@pink: 						#FBC0AD;
+@green: 					#00553F;
+@green-40: 					#D3EBD7;
+@red: 						#7F364F;
 
 /***************************************************************************
  * NAVIGATION COLOURS
@@ -83,36 +94,7 @@
 @colour-nav-4: 				#EDEDED;
 @colour-nav-5: 				#F7F7F7;
 @colour-nav-6: 				#FCFCFC;
-@colour-nav-7: 				#FFF;
-
-/***************************************************************************
- * COLORS
-*/
-@blue: 						@heritage-blue;
-@blue-40: 					#99B7C4;
-@blue-30: 					#B2C9DB;
-@blue-5: 					#F2F6F9;
-@yellow: 					#FCBB69;
-@lightyellow: 				#FDE37E;
-@yellow-30: 				#FEF7D8;
-@yellow-20: 				#FEF9E5;
-@yellow-10: 				#FFFCF2;
-@aqua: 						#90CE9C;
-@purple: 					#57486B;
-@purple-homepage: 			#B5AFD7;
-@teal: 						#006278;
-@pink: 						#FBC0AD;
-@green: 					#00553F;
-@green-40: 					#D3EBD7;
-@mauve: 					#B5AFD7;
-@orange: 					#EC7A3C;
-@grey: 						#D9DADA;
-@red: 						#7F364F;
-@backgroundGrey: 			#47565b;
-@colour-background: 		#FDFAEF;
-@dark-grey: 				#555;
-@notice-orange: 			#FFEBC6;
-@notice-orange-dark: 		#FFBF47;
+@colour-nav-7: 				@white;
 
 /***************************************************************************
  * CORPORATE COLOURS
@@ -130,11 +112,6 @@
 @facebook-brand-colour:     #3B579D;
 @twitter-brand-colour:      #55ACEE;
 @whatsapp-brand-colour:     #30D74D;
-
-/***************************************************************************
- * STATE COLORS
- * Used for Alerts, Media, States and form field validation states.
- */
 
 /***************************************************************************
  * HEADERS
