--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -224,7 +224,7 @@ li > ol {
         }
         & > a, & > span {
             text-decoration: none;
-            background-color: @backgroundGrey;
+            background-color: @gray-background;
             color: @white;
             display: inline-block;
             padding: .2em .7em;
