--- a/libs/existing/inc/boxes.less
+++ b/libs/existing/inc/boxes.less
@@ -64,7 +64,7 @@
 
 .box--outline {
     
-    border: 2px solid @blue;
+    border: 2px solid @heritage-blue;
     background: #fff;
     margin-bottom: 1.5em;
     padding: 0 1em;
