--- a/libs/existing/inc/breadcrumb.less
+++ b/libs/existing/inc/breadcrumb.less
@@ -47,7 +47,7 @@
     }
 
     i {
-        background: @blue;
+        background: @heritage-blue;
         color: #fff;
         margin: -.1em -.5em -.1em 1em;
         padding: .2em .3em;
