--- a/libs/existing/inc/forms.less
+++ b/libs/existing/inc/forms.less
@@ -127,7 +127,7 @@
         position: absolute;
         right: 0;
         top: 0;
-        background: @blue;
+        background: @heritage-blue;
         color: white;
         padding: 0 .2em;
         font-size: 1.3em;
