--- a/libs/existing/inc/lists.less
+++ b/libs/existing/inc/lists.less
@@ -32,7 +32,7 @@
     .selected{
 
        a{
-        background: @blue;
+        background: @heritage-blue;
         color: #FFF;
 
         &:hover{
@@ -53,7 +53,7 @@
     background: #eeeeee;
     overflow: hidden;
     margin-top: 10px;
-    border-bottom: 10px solid @blue;
+    border-bottom: 10px solid @heritage-blue;
 
 
       ul{
@@ -81,7 +81,7 @@
       }
 
       .selected{
-        background: @blue;
+        background: @heritage-blue;
         a{
           
           color: #FFF;
@@ -100,7 +100,7 @@
     background: #eeeeee;
     overflow: hidden;
     margin-top: 10px;
-    border-bottom: 10px solid @blue;
+    border-bottom: 10px solid @heritage-blue;
     clear: both;
     
     ul{
@@ -120,7 +120,7 @@
         width: 100%;
 
         &:hover, .selected{
-          background: @blue;
+          background: @heritage-blue;
           color: #fff;
           text-decoration: none;
         }
@@ -132,7 +132,7 @@
     .selected{
 
       a{
-        background: @blue;
+        background: @heritage-blue;
         color: #FFF;
 
         &:hover{
@@ -179,7 +179,7 @@
             cursor: default;
 
             & > span {
-                background-color: @blue;
+                background-color: @heritage-blue;
             }
         }
 
@@ -195,7 +195,7 @@
 
         & > a {
             &:hover, &:focus, &:active {
-                background-color: @blue;
+                background-color: @heritage-blue;
             }
         }
 
