--- a/libs/existing/inc/top-news.less
+++ b/libs/existing/inc/top-news.less
@@ -48,7 +48,7 @@
 .top-news__navigation {
     display: table;
     width: calc( ~"100% + 2em" );
-    background: @blue;
+    background: @heritage-blue;
     list-style: none;
     padding: 0;
     margin: 0 -1em -1em -1em;
