--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -123,7 +123,7 @@
 
 // Box with a bar along the top
 .box {
-    border-top: 8px solid @blue-40;
+    border-top: 8px solid @blue-navigation;
     background: @white;
     padding: 1em;
     margin-bottom: 1.5em;
@@ -148,7 +148,7 @@
 // There is blue top
 
 .box--orange {
-    border-top-color: @orange;
+    border-top-color: @beta-orange;
 }
 
 .box--green {
@@ -156,11 +156,11 @@
 }
 
 .box--purple {
-    border-top-color: @purple;
+    border-top-color: @beta-purple-dark;
 }
 
 .box--grey {
-    border-top-color: @grey;
+    border-top-color: @gray-6;
 }
 
 .box--pink {
@@ -185,7 +185,7 @@
 
 .box--outline {
     
-    border: 2px solid @blue;
+    border: 2px solid @heritage-blue;
     background: @white;
     margin-bottom: 1.5em;
     padding: 0 1em;
@@ -227,9 +227,9 @@
 
 .box--warning {
   overflow: hidden; // Allow to sit next to side boxes
-  background: lighten( @orange, 40% );
+  background: lighten( @beta-orange, 40% );
   padding: .5em 1em;
-  border-left: 3px solid @orange;
+  border-left: 3px solid @beta-orange;
 }
 
 // A box with two 50% halfs
