--- a/libs/modules/containers.less
+++ b/libs/modules/containers.less
@@ -59,7 +59,7 @@
 // Log-In
 .log-in-container {
     background: @white;
-    border-top: 10px solid @blue;
+    border-top: 10px solid @heritage-blue;
     margin-bottom: 6%;
 }
 
