--- a/libs/modules/members.less
+++ b/libs/modules/members.less
@@ -117,7 +117,7 @@
 
 .main-content__right--member-contactus {
     background: @white;
-    border-top: 8px solid @blue-40;
+    border-top: 8px solid @blue-navigation;
     margin-bottom: 1.5em;
     padding: 2em;
     width: 73%;
@@ -169,7 +169,7 @@
 
 .side-nav--member {
     & > h2 {
-        background: @blue;
+        background: @heritage-blue;
         color: white;
         margin: 0;
         font-size: @font-size-medium;
