--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -88,7 +88,7 @@ ol li, ul li {
 }
 .alpha-badge {
     font-weight:        @font-weight-bolder;
-    color:              @cloud;
+    color:              @gray-6;
     background-color:   @beta-red-lighter;
     display:            inline-block;
     float:              left;
