More colour fixes

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -33,10 +33,10 @@ a.button {
     }
 }
 .button--green.button--green {
-    background-color: @green;
+    background-color: @beta-green;
 
     &:hover, &:focus, &:active {
-        background: darken(@green,5%);
+        background: darken(@beta-green,5%);
     }
 }
 .button--orange.button--orange {
