--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -112,8 +112,8 @@
 
 .highlight--error {
   .callout(
-    @callout-background: lighten( @red, 60% ),
-    @callout-border: @red
+    @callout-background: lighten( @beta-red, 60% ),
+    @callout-border: @beta-red
   );
   .callout--border--left;
 }
