--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -152,7 +152,7 @@
 }
 
 .box--green {
-    border-top-color: @green;
+    border-top-color: @beta-green;
 }
 
 .box--purple {
@@ -172,7 +172,7 @@
 .box--side {
     padding: 0 1em;
     
-    background-color: @green-40;
+    background-color: @beta-green-lighter;
 
     & > h2 {
         font-size: 1.2em;
