--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -88,7 +88,7 @@
 @colour-nav-7: 				@white;
 
 /***************************************************************************
- * CORPORATE COLOURS
+ * HEADER COLOURS
 */
 
 @advisernet-header: 		#CBE0E4;
