--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -22,7 +22,7 @@
 
 .section-notice__content {
     .limit-width;
-    padding: @box-spacing-horizontal 0 0 0;
+    padding: @box-spacing-horizontal 0 0 @box-spacing-horizontal;
     overflow: hidden; // Prevent collapsing margins
     margin-bottom: @box-spacing;
 }
