Removed all @beta- variables!
- Also cleaned up the site.less :)

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -9,7 +9,7 @@ input[type=reset],
 input[type=button] {
     cursor: pointer;
     border-radius: @form-border-radius;
-    background-color: @beta-aqua-light;
+    background-color: @aqua-light;
     border: none;
     color: @heritage-blue;
     padding: @box-spacing-vertical @box-spacing-horizontal;
@@ -17,7 +17,7 @@ input[type=button] {
     &:hover,
     &:focus,
     &:active {
-        background-color: darken(@beta-aqua, 5%)
+        background-color: darken(@aqua, 5%)
     }
 }
 
@@ -33,17 +33,17 @@ a.button {
     }
 }
 .button--green.button--green {
-    background-color: @beta-green;
+    background-color: @green;
 
     &:hover, &:focus, &:active {
-        background: darken(@beta-green,5%);
+        background: darken(@green,5%);
     }
 }
 .button--orange.button--orange {
-    background-color: @beta-orange;
+    background-color: @orange;
 
     &:hover, &:focus, &:active {
-        background: darken(@beta-orange,10%);
+        background: darken(@orange,10%);
     }
 }
 .button--pink.button--pink {
@@ -56,10 +56,10 @@ a.button {
     }
 }
 .button--purple.button--purple {
-    background-color: @beta-purple-dark;
+    background-color: @purple-dark;
 
     &:hover, &:focus, &:active {
-        background: darken(@beta-purple-dark,10%);
+        background: darken(@purple-dark,10%);
     }
 }
 .button--grey.button--grey {
