--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -13,7 +13,7 @@
 
 @text-color:            	#191926;
 @brand-primary:         	#253460; // Blue
-@brand-secondary:       	@beta-aqua;
+@brand-secondary:       	@aqua;
 
 /***************************************************************************
  * BETA COLORS
@@ -48,31 +48,31 @@
 @generous-mauve:        	#B5AFD7;
 
 // Beta colours
-@beta-red:              	#DF3034;
-@beta-red-light:            lighten(@beta-red, 20%);
-@beta-red-lighter:          lighten(@beta-red, 40%); 	// #FAE1E1
+@red:              	#DF3034;
+@red-light:            lighten(@red, 20%);
+@red-lighter:          lighten(@red, 40%); 	// #FAE1E1
 @pink: 						#FBC0AD;
-@beta-orange:           	#F47738;
-@beta-orange-light:         lighten(@beta-orange, 20%);
-@beta-orange-lighter:       lighten(@beta-orange, 40%);
-@beta-green:            	#537D2D;
-@beta-green-light:          lighten(@beta-green, 45%);
-@beta-green-lighter:        lighten(@beta-green, 50%); 	// #D3E8C1
-@beta-green-dark:			darken(@beta-green, 10%);
-@beta-blue:      			#003C64;
-@beta-blue-light:       	#A5BDDC;
-//@beta-blue-lighter:  		lighten(@beta-blue-light, 15%);
-//@beta-blue-light:       	#dce5f1;
-@beta-blue-lighter:  		lighten(@beta-blue, 70%);
-@beta-blue-darker:          #32457E;
+@orange:           	#F47738;
+@orange-light:         lighten(@orange, 20%);
+@orange-lighter:       lighten(@orange, 40%);
+@green:            	#537D2D;
+@green-light:          lighten(@green, 45%);
+@green-lighter:        lighten(@green, 50%); 	// #D3E8C1
+@green-dark:			darken(@green, 10%);
+@blue:      			#003C64;
+@blue-light:       	#A5BDDC;
+//@blue-lighter:  		lighten(@blue-light, 15%);
+//@blue-light:       	#dce5f1;
+@blue-lighter:  		lighten(@blue, 70%);
+@blue-darker:          #32457E;
 @blue-navigation: 			#99B7C4;
 @blue-footer: 				#B2C9DB;
-@beta-aqua:             	#81CEC6;
-@beta-aqua-light:          	lighten(@beta-aqua, 15%);
-@beta-yellow:           	#FFBF47;
-@beta-yellow-light:     	lighten(@beta-yellow, 25%); // #FFEBC6
-@beta-purple:				#947ACA;
-@beta-purple-dark:			darken(@beta-purple, 25%);
+@aqua:             	#81CEC6;
+@aqua-light:          	lighten(@aqua, 15%);
+@yellow:           	#FFBF47;
+@yellow-light:     	lighten(@yellow, 25%); // #FFEBC6
+@purple:				#947ACA;
+@purple-dark:			darken(@purple, 25%);
 @gray-background: 			#47565b; // Blue-gray colour
 
 /***************************************************************************
