--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -48,7 +48,7 @@ li > ol {
         &:hover,
         &:focus {
             color:    @link-hover-color;
-            background-color: @beta-aqua-light;
+            background-color: @aqua-light;
         }
 
         &:active {
