--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -41,7 +41,7 @@ th {
         cursor: pointer;
         background: @heritage-blue url('/static/layout/sortable-default.png') no-repeat 99%;
         &:hover {
-            background-color: @beta-blue;
+            background-color: @blue;
         }   
     }
 
@@ -109,13 +109,13 @@ th {
 
 .td {
     &--green {
-        background-color: @beta-green-lighter;
+        background-color: @green-lighter;
     }
     &--amber {
-        background-color: @beta-yellow-light;
+        background-color: @yellow-light;
     }
     &--red {
-        background-color: @beta-red-lighter;
+        background-color: @red-lighter;
     }
 }
 
