--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -143,7 +143,7 @@
 
 @field-boxed-bg:            		@white;
 @field-boxed-hover-bg:      		@gray-6;
-@field-boxed-active-bg:     		@beta-aqua-light;
+@field-boxed-active-bg:     		@aqua-light;
 
 @field-boxed-border:        		transparent;
 @field-boxed-hover-border:  		@gray-4;
