--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -92,11 +92,11 @@
 }
 
 .box--yellow {
-    border-top-color: @beta-yellow;
+    border-top-color: @yellow;
 }
 
 .box--aqua {
-    border-top-color: @beta-aqua;
+    border-top-color: @aqua;
 }
 
 .box--blue {
@@ -148,15 +148,15 @@
 // There is blue top
 
 .box--orange {
-    border-top-color: @beta-orange;
+    border-top-color: @orange;
 }
 
 .box--green {
-    border-top-color: @beta-green;
+    border-top-color: @green;
 }
 
 .box--purple {
-    border-top-color: @beta-purple-dark;
+    border-top-color: @purple-dark;
 }
 
 .box--grey {
@@ -172,7 +172,7 @@
 .box--side {
     padding: 0 1em;
     
-    background-color: @beta-green-lighter;
+    background-color: @green-lighter;
 
     & > h2 {
         font-size: 1.2em;
@@ -227,9 +227,9 @@
 
 .box--warning {
   overflow: hidden; // Allow to sit next to side boxes
-  background: lighten( @beta-orange, 40% );
+  background: lighten( @orange, 40% );
   padding: .5em 1em;
-  border-left: 3px solid @beta-orange;
+  border-left: 3px solid @orange;
 }
 
 // A box with two 50% halfs
