--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -27,7 +27,7 @@
 
     .breadcrumb__item {
         font-size: @font-size-base;
-        color: @beta-blue-light;
+        color: @blue-light;
         line-height: (@line-height-small * 2);
         
         &>i {
