--- a/libs/modules/collapse.less
+++ b/libs/modules/collapse.less
@@ -10,19 +10,19 @@
 
     &--aqua {
         .collapse( 
-            @beta-aqua 
+            @aqua 
         ) 
     }
 
     &--green {
         .collapse( 
-            @beta-green 
+            @green 
         ) 
     }
 
     &--red {
         .collapse( 
-            @beta-red 
+            @red 
         ) 
     }
 }
