--- a/libs/modules/extent-switcher.less
+++ b/libs/modules/extent-switcher.less
@@ -7,7 +7,7 @@
 
 .beta-extent-switcher {
 	float: left;
-	border: @beta-blue-light 1px solid;
+	border: @blue-light 1px solid;
 	padding: @box-spacing-vertical @box-spacing-horizontal;
 	
 	@media screen and (max-width: @screen-xs-max) {
