--- a/libs/modules/members.less
+++ b/libs/modules/members.less
@@ -177,7 +177,7 @@
     }
 
     & .member_group_label {
-        background: @beta-blue-light;
+        background: @blue-light;
         display: block;
         padding: .5em;
     }
@@ -239,19 +239,19 @@
     margin-right: 10px;
 }
 .bureau-colour.green {
-    background: @beta-green;
+    background: @green;
 }
 .bureau-colour.blue {
-    background: @beta-blue;
+    background: @blue;
 }
 .bureau-colour.orange {
-    background: @beta-orange;
+    background: @orange;
 }
 .bureau-colour.purple {
-    background: @beta-purple;
+    background: @purple;
 }
 .bureau-colour.yellow {
-    background: @beta-yellow;
+    background: @yellow;
 }
 .key-container {
     margin-top: 10px;
