--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -192,14 +192,14 @@
 
     .share-bar__link--print {
         &:hover, &:focus {
-            background: @beta-purple;
+            background: @purple;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @beta-purple;
+            background: @purple;
 
             &:hover {
-                background: darken(@beta-purple,10%);
+                background: darken(@purple,10%);
             }
         }
     }
@@ -207,28 +207,28 @@
     .share-bar__link--feedback,
     .share-bar__link--bmis {
         &:hover, &:focus {
-            background: @beta-green;
+            background: @green;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @beta-green;
+            background: @green;
 
             &:hover {
-                background: darken(@beta-green,10%);
+                background: darken(@green,10%);
             }
         }
     }
 
     .share-bar__link--email-alerts {
         &:hover, &:focus {
-            background: @beta-orange;
+            background: @orange;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @beta-orange;
+            background: @orange;
 
             &:hover {
-                background: darken(@beta-orange,10%);
+                background: darken(@orange,10%);
             }
         }
     }
@@ -249,14 +249,14 @@
 
     .share-bar__link--word {
         &:hover, &:focus {
-            background: @beta-green;
+            background: @green;
         }
 
         @media (max-width: @screen-xs-max) {
-            background: @beta-green;
+            background: @green;
 
             &:hover {
-                background: darken(@beta-green,10%);
+                background: darken(@green,10%);
             }
         }
     }
