--- a/libs/modules/sidebar-navigation-accordion.less
+++ b/libs/modules/sidebar-navigation-accordion.less
@@ -49,8 +49,8 @@
     #beta-dap-menu-accordion .beta-dap-menu-accordion__link {
         padding: @box-spacing*.875 @box-spacing*2 @box-spacing*.875 @box-spacing*.875;
         background-color: @heritage-blue-lightest;
-        //border-right: 0.1em solid @beta-blue-light;
-        //border-left: 0.1em solid @beta-blue-light;
+        //border-right: 0.1em solid @blue-light;
+        //border-left: 0.1em solid @blue-light;
     }
 
     #beta-dap-menu-accordion .beta-dap-menu-accordion__section > .beta-dap-menu-accordion__link {
@@ -62,14 +62,14 @@
         font-weight: @font-weight-bolder;
         text-decoration: none;
         color: @heritage-blue;
-        background: @beta-blue-light;
+        background: @blue-light;
         border-bottom: 1px solid @white;
         -webkit-transition: color .2s ease;
         -o-transition: color .2s ease;
         transition: color .2s ease;
 
         &:hover {
-            color: @beta-blue-darker;
+            color: @blue-darker;
         }
     }
 
@@ -79,15 +79,15 @@
             text-decoration: none;
 
             &:hover {
-                background-color: @beta-blue-light;
-                color: @beta-blue-darker;
+                background-color: @blue-light;
+                color: @blue-darker;
             }
         }
 
         &.-current {
             .beta-dap-menu-accordion__link {
-                color: @beta-blue-darker;
-                background-color: @beta-blue-light;
+                color: @blue-darker;
+                background-color: @blue-light;
             }
         }
     }
@@ -142,7 +142,7 @@
     transition: color .2s ease;
 
     &:hover {
-        color: @beta-blue-darker;
+        color: @blue-darker;
         background-color: @gray-5;
     }
 }
