--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -36,22 +36,22 @@
     li {
         padding: 0;
         margin: 0;
-        //border-bottom: 0.1em solid @beta-blue-light;
+        //border-bottom: 0.1em solid @blue-light;
     }
     li:last-child {
        border-bottom: none;
     }
     li.current {
         font-weight: @font-weight-bold;
-        background-color: @beta-blue-lighter;
+        background-color: @blue-lighter;
         padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
         margin: 0;
-        border-bottom: 0.1em solid @beta-blue-light;
+        border-bottom: 0.1em solid @blue-light;
     }
     li.title,
     li.side-nav__group {
         font-weight: @font-weight-bold;
-        background-color: @beta-blue-light;
+        background-color: @blue-light;
         color: @heritage-blue;
         margin: 0;
         border-bottom: 0.1em solid @white;
@@ -71,8 +71,8 @@
         
         &.-current {
             font-weight: @font-weight-bold;
-            background-color: @beta-blue-lighter;
-            border-bottom: 0.1em solid @beta-blue-light;
+            background-color: @blue-lighter;
+            border-bottom: 0.1em solid @blue-light;
         }
         
         &:hover {
