--- a/libs/modules/status.less
+++ b/libs/modules/status.less
@@ -7,7 +7,7 @@
 
 .status {
     padding: @box-spacing*1.5 @box-spacing @box-spacing*.5 @box-spacing;
-    background-color: @beta-yellow-light;
+    background-color: @yellow-light;
     color: @gray-1;
     vertical-align: middle;
     margin: 0;
@@ -15,7 +15,7 @@
 }
 .alpha-badge {
     font-weight: 700;
-    background-color: @beta-yellow;
+    background-color: @yellow;
     color: @gray-1;
     display: inline-block;
     float: left;
