--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -89,7 +89,7 @@ ol li, ul li {
 .alpha-badge {
     font-weight:        @font-weight-bolder;
     color:              @gray-6;
-    background-color:   @beta-red-lighter;
+    background-color:   @red-lighter;
     display:            inline-block;
     float:              left;
     padding:            (@paragraph-margin-bottom * 0.5);
@@ -174,15 +174,15 @@ pre {
     &.swatch--brand--generous-green     { background-color: #00553F; color: @white; }
     &.swatch--brand--generous-mauve     { background-color: #B5AFD7; }
 
-    &.swatch--beta--red                 { background-color: @beta-red; color: @white; }
-    &.swatch--beta--orange              { background-color: @beta-orange; }
-    &.swatch--beta--green               { background-color: @beta-green; color: @white; }
-    &.swatch--beta--blue-darker         { background-color: @beta-blue; color: @white; }
-    &.swatch--beta--blue-light          { background-color: @beta-blue-light; }
-    &.swatch--beta--blue-light-tint     { background-color: @beta-blue-lighter; }
-    &.swatch--beta--aqua                { background-color: @beta-aqua; }
-    &.swatch--beta--yellow              { background-color: @beta-yellow; }
-    &.swatch--beta--yellow-light        { background-color: @beta-yellow-light; }
+    &.swatch--beta--red                 { background-color: @red; color: @white; }
+    &.swatch--beta--orange              { background-color: @orange; }
+    &.swatch--beta--green               { background-color: @green; color: @white; }
+    &.swatch--beta--blue-darker         { background-color: @blue; color: @white; }
+    &.swatch--beta--blue-light          { background-color: @blue-light; }
+    &.swatch--beta--blue-light-tint     { background-color: @blue-lighter; }
+    &.swatch--beta--aqua                { background-color: @aqua; }
+    &.swatch--beta--yellow              { background-color: @yellow; }
+    &.swatch--beta--yellow-light        { background-color: @yellow-light; }
 
     &.swatch--mono--black               { background-color: @black; color: @white; }
     &.swatch--mono--gray0               { background-color: @gray-0; color: @white; }
