Fixes for index pages
- Added content-index.less for content index pages

--- a/libs/site.less
+++ b/libs/site.less
@@ -33,6 +33,7 @@
 @import "modules/main-content";
 @import "modules/feed";
 @import "modules/containers";
+@import "modules/content-index";
 @import "modules/main-nav";
 @import "modules/page-info";
 @import "modules/breadcrumb";
