--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -88,6 +88,13 @@
 
 }
 
+.box--warning {
+    .callout( 
+        @yellow-light 
+    ); 
+    .callout--border--left;
+}
+
 /**
  * HIGHLIGHTS
  *
