--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -181,7 +181,9 @@
 
 // Progress panel - for instructional information, primarily used for 'Next stages'.
 .dap-panel--progress {
-    .callout( @generous-mauve, @generous-green ); // .callout--generous
+    .callout( @gray-8, @inventive-teal, @callout-border: @inventive-teal ); // .callout--generous
+    //.callout--border;
+    .callout--border--top;
 }
 
 // Adviser box - extending to style the adviser only content.
