--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -8,8 +8,7 @@
 .steps {
     .callout( @callout-border: @gray-5, @callout-background: white );
     .callout--border;
-    //.callout--border--left;
-    border-width: 8px 1px 1px 1px;
+    .callout--border--top;
     margin-top: 2rem;
     .flex-row {
         padding: 0;
