--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -15,9 +15,9 @@
 @max-page-width-before-the-share-bar-ruins-it-all: 1148px;
 
 // Breakpoints - raw numbers
-@breakpoint-sm: 					480; // Greater than or equal
-@breakpoint-md: 					768; // Greater than or equal
-@breakpoint-lg: 					1080; // Greater than or equal
+@breakpoint-sm: 					480px; // Greater than or equal
+@breakpoint-md: 					768px; // Greater than or equal
+@breakpoint-lg: 					1080px; // Greater than or equal
 
 // Breakpoints - pixel values 
 @screen-xs-max: 					unit((@breakpoint-sm - 1), px);
