--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -124,6 +124,17 @@ ol li, ul li {
         padding: 0 2em; 
     }
 }
+span.code {
+    color: #333;
+    padding: 5px;
+    font-size: @font-size-small;
+    margin: 1em 1em 3em 1em;
+    font-family: monaco,monospace;
+    line-height: 1.7em;
+    background-color: #f8f8f8;
+    border: 1px solid #dfe1e3;
+    border-radius: 2px;
+}
 
 div[class*="callout"] code {
     color: inherit;
