Updated colours page

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -48,7 +48,7 @@ html[lang="en-SCT"] .main-nav {
 
         &:hover, &:focus {
             background: @heritage-blue-lightest;
-            color: #01355a;
+            color: @heritage-blue;
             text-decoration: none;
         }
     }
