--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -174,6 +174,7 @@ pre {
         line-height: (@line-height-base * 0.8);
         font-weight: @font-weight-bold;
         font-size: (@font-size-base * 0.8);
+        margin: 0;
     }
 
     &.swatch--brand--heritage-blue      { background-color: #004B88; color: @white; }
@@ -186,24 +187,36 @@ pre {
     &.swatch--brand--generous-mauve     { background-color: #B5AFD7; }
 
     &.swatch--beta--red                 { background-color: @red; color: @white; }
+    &.swatch--beta--red-light           { background-color: @red-light; color: @white; }
+    &.swatch--beta--red-lighter         { background-color: @red-lighter; color: @black; }
+    &.swatch--beta--pink                { background-color: @pink; }
     &.swatch--beta--orange              { background-color: @orange; }
+    &.swatch--beta--orange-light        { background-color: @orange-light; }
+    &.swatch--beta--orange-lighter      { background-color: @orange-lighter; }
     &.swatch--beta--green               { background-color: @green; color: @white; }
-    &.swatch--beta--blue-darker         { background-color: @blue; color: @white; }
+    &.swatch--beta--green-light         { background-color: @green-light; }
+    &.swatch--beta--green-lighter       { background-color: @green-lighter; }
+    &.swatch--beta--blue                { background-color: @blue; color: @white; }
     &.swatch--beta--blue-light          { background-color: @blue-light; }
-    &.swatch--beta--blue-light-tint     { background-color: @blue-lighter; }
+    &.swatch--beta--blue-lighter        { background-color: @blue-lighter; }
+    &.swatch--beta--blue-darker         { background-color: @blue-darker; color: @white; }
     &.swatch--beta--aqua                { background-color: @aqua; }
+    &.swatch--beta--aqua-light          { background-color: @aqua-light; }
     &.swatch--beta--yellow              { background-color: @yellow; }
     &.swatch--beta--yellow-light        { background-color: @yellow-light; }
+    &.swatch--beta--purple              { background-color: @purple; }
+    &.swatch--beta--purple-dark         { background-color: @purple-dark; }
 
     &.swatch--mono--black               { background-color: @black; color: @white; }
     &.swatch--mono--gray0               { background-color: @gray-0; color: @white; }
     &.swatch--mono--gray1               { background-color: @gray-1; color: @white; }
     &.swatch--mono--gray2               { background-color: @gray-2; color: @white; }
-    &.swatch--mono--gray3               { background-color: @gray-3; color: @black; }
-    &.swatch--mono--gray4               { background-color: @gray-4; color: @black; }
+    &.swatch--mono--gray3               { background-color: @gray-3; color: @white; }
+    &.swatch--mono--gray4               { background-color: @gray-4; color: @white; }
     &.swatch--mono--gray5               { background-color: @gray-5; color: @black; }
     &.swatch--mono--gray6               { background-color: @gray-6; color: @black; }
-    &.swatch--mono--gray7               { background-color: @gray-6; color: @black; }
+    &.swatch--mono--gray7               { background-color: @gray-7; color: @black; }
+    &.swatch--mono--gray8               { background-color: @gray-8; color: @black; }
     &.swatch--mono--white               { background-color: @white; color: @black; }
 }
 
