--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -204,6 +204,7 @@ pre {
     &.swatch--beta--aqua-light          { background-color: @aqua-light; }
     &.swatch--beta--yellow              { background-color: @yellow; }
     &.swatch--beta--yellow-light        { background-color: @yellow-light; }
+    &.swatch--beta--yellow-darker        { background-color: @heritage-yellow-darker; }
     &.swatch--beta--purple              { background-color: @purple; }
     &.swatch--beta--purple-dark         { background-color: @purple-dark; }
 
