--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -38,7 +38,7 @@
 @heritage-blue-lighter:     lighten(@heritage-blue, 55%);
 @heritage-blue-lightest:	#f2f8ff;
 @heritage-yellow:       	#FCBB69;
-@heritage-yellow-lighter:   lighten(@heritage-yellow, 20%);
+@heritage-yellow-lighter:   lighten(@heritage-yellow, 18%);
 @heritage-yellow-darker:    darken(@heritage-yellow, 10%);
 @responsible-purple:    	#57486B;
 @responsible-aqua:      	#90CE9C;
@@ -49,12 +49,12 @@
 
 // Beta colours
 @red:              			#DF3034;
-@red-light:            		lighten(@red, 20%);
-@red-lighter:          		lighten(@red, 40%); 	// #FAE1E1
-@pink: 						#FBC0AD;
+@red-light:            		lighten(@red, 12%);
+@red-lighter:          		lighten(@red, 28%); 	// #FAE1E1
+@pink: 						#F499BE; //#FBC0AD
 @orange:           			#F47738;
-@orange-light:         		lighten(@orange, 20%);
-@orange-lighter:       		lighten(@orange, 40%);
+@orange-light:         		lighten(@orange, 15%);
+@orange-lighter:       		lighten(@orange, 25%);
 @green:            			#537D2D;
 @green-light:          		lighten(@green, 45%);
 @green-lighter:        		lighten(@green, 50%); 	// #D3E8C1
@@ -64,7 +64,7 @@
 //@blue-lighter:  			lighten(@blue-light, 15%);
 //@blue-light:       		#dce5f1;
 @blue-lighter:  			lighten(@blue, 70%);
-@blue-darker:          		#32457E;
+@blue-darker:          		darken(@blue, 5%); //#32457E
 @blue-navigation: 			#99B7C4;
 @blue-footer: 				#B2C9DB;
 @aqua:             			#81CEC6;
